--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -23,6 +23,8 @@
   </script>
 </head>
 <body>
+  <h1>{{ page.title }}</h1>
+  {% include toc.html html=content %}
   {{ content }}
 </body>
 </html>
